[package]
name = "chain_db_rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", feature = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
sha256 = "1.1.4"
random-string = "1.0.0"
